[package]
name = "opensmtp-rspam-filter"
version = "0.1.0"
authors = ["Thom May <thom@may.yt>"]
edition = "2018"

[dependencies]
chrono = "*"
reqwest = "*"
email = { git = "https://github.com/thommay/rust-email.git", branch = "params_with_spaces" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.38"
slog = "*"
slog-syslog = "*"
slog-async = "*"
slog-term = "*"
